--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,17 +6,23 @@ on:
         description: 'Enter Chrome Remote Desktop Code'
         required: true
         type: string
+      email:
+        description: 'Enter Email for GetScreen.me registration'
+        required: true
+        type: string
 
 jobs:
   build:
-    name: Start RDP with Software, VPN, Audio, and Loop
+    name: Start RDP, Install Software, Register Email, and Setup Audio
     runs-on: windows-latest
+
     steps:
       - name: Print Email Input
         run: |
           echo "Email Address: ${{ github.event.inputs.email }}"
-          
+
       - name: Install GetScreen.me
+        shell: pwsh
         run: |
           Write-Output "📥 Downloading GetScreen.me..."
           $url = "https://getscreen.me/download/getscreen.msi"
@@ -25,7 +31,7 @@ jobs:
 
           Write-Output "📦 Installing GetScreen.me..."
           Start-Process msiexec.exe -ArgumentList "/i `"$msiPath`" /qn /norestart" -Wait
-          
+
           $exePath = "${env:ProgramFiles}\\GetScreen.me\\getscreen.exe"
           if (Test-Path $exePath) {
             Write-Output "🔑 Registering GetScreen.me with email..."
@@ -39,6 +45,7 @@ jobs:
           }
 
       - name: Install Chrome Remote Desktop Host
+        shell: pwsh
         run: |
           $msiUrl = "https://dl.google.com/edgedl/chrome-remote-desktop/chromeremotedesktophost.msi"
           $msiPath = "$env:TEMP\chromeremotedesktophost.msi"
@@ -46,6 +53,7 @@ jobs:
           Start-Process msiexec.exe -ArgumentList "/i `"$msiPath`" /qn" -Wait
 
       - name: Start Chrome Remote Desktop Session
+        shell: pwsh
         run: |
           $code = "${{ github.event.inputs.remote_code }}"
           $redirect = "https://remotedesktop.google.com/_/oauthredirect"
@@ -53,28 +61,27 @@ jobs:
           Start-Process -FilePath "$exePath" -ArgumentList "--code=$code --redirect-url=$redirect --name=$env:COMPUTERNAME --pin=123456" -Wait
 
       - name: Optimization (Resolution + Dark Mode + Black Wallpaper)
+        shell: pwsh
         run: |
-          # 1. Set Resolution
+          # Set resolution
           curl.exe -L -o "$env:TEMP\nircmd.zip" "https://www.nirsoft.net/utils/nircmd.zip"
           Expand-Archive -Path "$env:TEMP\nircmd.zip" -DestinationPath "$env:TEMP\nircmd" -Force
           & "$env:TEMP\nircmd\nircmd.exe" setdisplay 1366 768 32
 
-          # 2. Force Dark Mode Registry
+          # Force dark mode
           $ThemePath = "HKCU:\Software\Microsoft\Windows\CurrentVersion\Themes\Personalize"
           if (-not (Test-Path $ThemePath)) { New-Item -Path $ThemePath -Force }
           Set-ItemProperty -Path $ThemePath -Name "AppsUseLightTheme" -Value 0
           Set-ItemProperty -Path $ThemePath -Name "SystemUsesLightTheme" -Value 0
 
-          # 3. Create Solid Black Image & Set Wallpaper
+          # Black wallpaper
           Add-Type -AssemblyName System.Drawing
-          $bmp = New-Object System.Drawing.Bitmap(1920, 1080)
+          $bmp = New-Object System.Drawing.Bitmap(1920,1080)
           $g = [System.Drawing.Graphics]::FromImage($bmp); $g.Clear([System.Drawing.Color]::Black)
           $wall = "$env:TEMP\black.bmp"; $bmp.Save($wall); $g.Dispose(); $bmp.Dispose()
-          
           Set-ItemProperty -Path "HKCU:\Control Panel\Desktop" -Name "Wallpaper" -Value $wall
           Set-ItemProperty -Path "HKCU:\Control Panel\Colors" -Name "Background" -Value "0 0 0"
 
-          # 4. Force Update via Windows User32 API
           $api = @'
           using System.Runtime.InteropServices;
           public class UI {
@@ -85,13 +92,13 @@ jobs:
           Add-Type -TypeDefinition $api
           [UI]::SystemParametersInfo(20, 0, $wall, 3)
 
-          # 5. Refresh Shell
           Stop-Process -Name explorer -Force -ErrorAction SilentlyContinue
           Start-Sleep -Seconds 2
           Start-Process explorer.exe
-          Write-Output "✅ Environment Clean and Dark."
+          Write-Output "✅ Environment optimized."
 
       - name: Fast Software Installation (IDM, WinRAR, VPN, Discord)
+        shell: pwsh
         run: |
           # WinRAR
           curl.exe -L -o "$env:TEMP\winrar.exe" "https://www.rarlab.com/rar/winrar-x64-712.exe"
@@ -115,22 +122,25 @@ jobs:
           Start-Process "$env:TEMP\discord.exe" "/S"
 
       - name: Final Setup (Tor + Audio + Loop)
+        shell: pwsh
         run: |
-          # Tor
+          # Tor Browser
           curl.exe -L -o "$env:TEMP\tor.zip" "https://www.dropbox.com/scl/fi/faraacel5x4ssj5clo2j1/Browser.zip?rlkey=81rsd6nbwk2p95e0t3mpcirfi&st=3pnv7hia&dl=1"
           Expand-Archive "$env:TEMP\tor.zip" "$env:USERPROFILE\browser" -Force
-          
-          # Shortcuts
-          $s = New-Object -ComObject WScript.Shell
-          $t = $s.CreateShortcut("$env:USERPROFILE\Desktop\Tor.lnk"); $t.TargetPath = "$env:USERPROFILE\browser\Browser\firefox.exe"; $t.Save()
-          $d = $s.CreateShortcut("$env:USERPROFILE\Desktop\Discord.lnk"); $d.TargetPath = "$env:LOCALAPPDATA\Discord\Update.exe"; $d.Arguments = "--processStart Discord.exe"; $d.Save()
 
-          # Audio
+          $s = New-Object -ComObject WScript.Shell
+          $t = $s.CreateShortcut("$env:USERPROFILE\Desktop\Tor.lnk")
+          $t.TargetPath = "$env:USERPROFILE\browser\Browser\firefox.exe"; $t.Save()
+          $d = $s.CreateShortcut("$env:USERPROFILE\Desktop\Discord.lnk")
+          $d.TargetPath = "$env:LOCALAPPDATA\Discord\Update.exe"
+          $d.Arguments = "--processStart Discord.exe"; $d.Save()
+
+          # Virtual Audio (VB-Cable)
           curl.exe -L -o "$env:TEMP\vb.zip" "https://download.vb-audio.com/Download_CABLE/VBCABLE_Driver_Pack43.zip"
           Expand-Archive "$env:TEMP\vb.zip" "$env:TEMP\vb" -Force
-          Start-Process "$env:TEMP\vb\VBCABLE_Setup_x64.exe" "-i -h"
+          Start-Process "$env:TEMP\vb\VBCABLE_Setup_x64.exe" "-i -h" -Wait
           Start-Service "AudioSrv", "AudioEndpointBuilder"
 
-          # Loop
-          git clone https://github.com/Alex15969/Loop
-          cd Loop; cmd /c loop.bat
+          # Run Loop
+          git clone https://github.com/Alex15969/Loop "$env:TEMP\Loop"
+          cd "$env:TEMP\Loop"; cmd /c loop.bat
